src/objects/General_Information__kav.object
<CustomObject>
    <articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <template>Toc</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <template>Toc</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <template>Toc</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <template>Toc</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay>
    <description>General Information provided on community home page. It consist of polices, procedures, tools, and introductory technical content.</description>
    <fields>
        <fullName>CS_Article__c</fullName>
        <description>Body of the article</description>
        <label>Article</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>CS_Associated_Articles__c</fullName>
        <description>Associated articles</description>
        <label>Associated Articles</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CS_Attachment_1__c</fullName>
        <description>Publicly visible attachment</description>
        <label>Attachment 1</label>
        <type>File</type>
    </fields>
    <fields>
        <fullName>CS_Attachment_2__c</fullName>
        <label>Attachment 2</label>
        <type>File</type>
    </fields>
    <fields>
        <fullName>CS_Attachment_3__c</fullName>
        <label>Attachment 3</label>
        <type>File</type>
    </fields>
    <fields>
        <fullName>CS_Content_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A field to store the person to contact w/ questions about the article.</description>
        <label>Content Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>General_Information</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CS_Content_URL_4__c</fullName>
        <label>Content URL 4</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>CS_General_Information_Template__c</fullName>
        <formula>HYPERLINK(&apos;/servlet/servlet.FileDownload?file=015340000021tw4&apos;, &apos;Click here for General Information Template&apos;, &apos;_blank&apos;)</formula>
        <label>General Information Template</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Publish_Status__c</fullName>
        <label>Publish Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Publishing_Notes__c</fullName>
        <description>Publishing notes</description>
        <label>Publishing Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CS_Related_Document_1__c</fullName>
        <label>Content URL 1</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>CS_Related_Document_2__c</fullName>
        <label>Content URL 2</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>CS_Related_Document_3__c</fullName>
        <label>Content URL 3</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>CS_RightNow_ID__c</fullName>
        <label>RightNow ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Content_URL_5__c</fullName>
        <label>Content URL 5</label>
        <type>Url</type>
    </fields>
    <label>General Information</label>
    <pluralLabel>General Information</pluralLabel>
</CustomObject>